--- a/list.html
+++ b/list.html
@@ -18,7 +18,7 @@
         justify-content: center;
         align-items: center;
         min-height: 100vh;
-        background: #f0f0f0;
+        background: #000; /* Background behind the card is now black */
       }
       /* Modern card styling with a gradient background and glowing white border */
       .card {
