--- a/list.html
+++ b/list.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Modern Checkmark Animation Card</title>
+    <title>Animated Gradient Card with Enhanced Glow</title>
     <!-- Using Montserrat Bold from Google Fonts as a stand-in for Monsteratt Bold -->
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap"
@@ -18,21 +18,41 @@
         justify-content: center;
         align-items: center;
         min-height: 100vh;
-        background: #000; /* Background behind the card is now black */
+        background: #000; /* Black background */
       }
-      /* Modern card styling with a gradient background and glowing white border */
+      /* Animated gradient card with enhanced glowing effect */
       .card {
-        background: linear-gradient(135deg, #3544ee, #5868f7);
+        background: linear-gradient(
+          45deg,
+          #3544ee,
+          #5868f7,
+          #8a4fff,
+          #5868f7,
+          #3544ee
+        );
+        background-size: 600% 600%;
+        animation: gradientAnimation 10s ease infinite;
         padding: 40px;
         border-radius: 12px;
         border: 1px solid rgba(255, 255, 255, 0.7);
-        box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.2),
-          0 4px 12px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 0 15px rgba(255, 255, 255, 0.8),
+          0 0 30px rgba(255, 255, 255, 0.5);
         width: 320px;
         color: #fff;
         font-family: "Montserrat", sans-serif;
       }
-      /* Each list item */
+      @keyframes gradientAnimation {
+        0% {
+          background-position: 0% 50%;
+        }
+        50% {
+          background-position: 100% 50%;
+        }
+        100% {
+          background-position: 0% 50%;
+        }
+      }
+      /* List item styling */
       .item {
         display: flex;
         align-items: center;
@@ -50,7 +70,7 @@
       .item:nth-child(3) {
         animation-delay: 1.3s;
       }
-      /* The checkmark container */
+      /* Checkmark container */
       .checkmark {
         width: 24px;
         height: 24px;
@@ -60,17 +80,16 @@
         width: 100%;
         height: 100%;
       }
-      /* The checkmark path: we set up a stroke-dash animation */
+      /* Checkmark path animation */
       .checkmark path {
         stroke: #fff;
         stroke-width: 3;
         fill: none;
-        /* The dash pattern – adjust if your path length changes */
         stroke-dasharray: 42;
         stroke-dashoffset: 42;
         animation: draw 0.5s ease forwards;
       }
-      /* Stagger the checkmark drawing to match each list item */
+      /* Stagger checkmark animations */
       .item:nth-child(1) .checkmark path {
         animation-delay: 0.3s;
       }
@@ -80,13 +99,11 @@
       .item:nth-child(3) .checkmark path {
         animation-delay: 1.3s;
       }
-      /* Animation for drawing the checkmark */
       @keyframes draw {
         to {
           stroke-dashoffset: 0;
         }
       }
-      /* Fade-in animation for the entire item */
       @keyframes fadeIn {
         to {
           opacity: 1;
@@ -104,7 +121,6 @@
       <div class="item">
         <div class="checkmark">
           <svg viewBox="0 0 48 48">
-            <!-- A simple checkmark path -->
             <path d="M10 24 L20 34 L38 14" />
           </svg>
         </div>
